# alignment-colorizer

./: .gitignore  Cargo.toml
src/: fasta_parser.rs  main.rs
tests/: cli.rs
