[package]
name = "alignment-colorizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features=["derive"]}
env_logger = "0.11"
indicatif = "0.18"
json = "0.12"
log = "0.4"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
